--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             </tbody>
         </table>
     <div class="v-image-3">
-        <iframe class="v-video" src="./img/Assassin_s Creed Valhalla - Official Trailer.mp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <video class="v-video" src="./video/Assassin_s Creed Valhalla - Official Trailer.mp4" controls autoplay loop preload="auto"></video>
     </div>
     </div>
 
