--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <meta property="og:image" content="./img/Daco_4715237.png" /> 
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/Daco_4715237.png"> 
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/Daco_4715237.png"> 
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/Daco_4715237.png"> 
+    <link rel="manifest" href="./img/Daco_4715237.png">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
